# slack-app-company-research

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.chalice/: config-base.json  policy-dev.json
chalicelib/: research_company.py
chalicelib/libs/notion_api/: create_page.py
chalicelib/libs/slack_api/ui/modal/: create_modal.py
chalicelib/libs/slack_api/ui/public/: sports.json
chalicelib/llms/: openai_.py  perplexity.py
chalicelib/models/: company_research.py
chalicelib/prompts/: get_structured_company.jinja  research_items.jinja
chalicelib/schema/: company.json  recruitment.json  service.json
chalicelib/utils/: load_prompt.py
